--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
+    <div class="form-container">
+        <h1>Please Login</h1>
+        <form>
+            <div class="form-control">
+                <input type="text" required>
+                <label>Email</label>
+            </div>
+            <div class="form-control">
+                <input type="password" required>
+                <label>Password</label>
+            </div>
+            <button class="login-btn">Login</button>
+            <p class="text">Don't have an account?</p>
+            <a href="#">Register</a>
+        </form>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
